# erocci_core

./: .editorconfig  .gitignore  .travis.yml  Makefile  Makefile.in  README.md  bootstrap  configure  configure.ac
include/: erocci.hrl  erocci_acl.hrl  erocci_types.hrl  occi.hrl  occi_acl.hrl  occi_model_store.hrl
priv/schemas/: occi-core.xml
src/: erocci_acl.erl  erocci_acls.erl  erocci_backend.erl  erocci_backend_dummy.erl  erocci_backends.erl  erocci_config.erl  erocci_core.app.src  erocci_core.app.src.in  erocci_core.erl  erocci_core_app.erl  erocci_core_sup.erl  erocci_creds.erl  erocci_errors.erl  erocci_filter.erl  erocci_listener.erl  erocci_listeners.erl  erocci_node.erl  erocci_request.erl  erocci_store.erl  erocci_sup.erl  erocci_table_mgr.erl  occi_acl.erl  occi_action.erl  occi_attribute.erl  occi_backend.erl  occi_backend_dummy.erl  occi_capabilities.erl  occi_category_mgr.erl  occi_cid.erl  occi_collection.erl  occi_config.erl  occi_core_app.erl  occi_entity.erl  occi_extension.erl  occi_hook.erl  occi_kind.erl  occi_known.erl  occi_link.erl  occi_listener.erl  occi_mixin.erl  (+25 more)
